<resources>
    <string name="app_name">MyDatastoreApp</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="post_id">blog id</string>
    <string name="update_post_title">update blog title</string>
    <string name="post_title">blog title</string>
    <string name="query">Query</string>
    <string name="clear">Clear</string>
    <string name="delete">delete</string>
    <string name="delete_post_title">delete post</string>
    <string name="has_one_unidirectional">Has One Unidirectional</string>
    <string name="HasOneBiLabel">Has One Bi Directional</string>
    <string name="has_one_bidirectional">Has One Bi</string>
    <string name="has_many_bidirectional">Has many bidirectional</string>
</resources>