<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HasOneUniActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_one_unidirectional"
        app:layout_constraintBottom_toTopOf="@+id/query"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@id/query"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label" />

    <Button
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query"
        app:layout_constraintBottom_toTopOf="@id/editText_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear" />

    <EditText
        android:id="@+id/editText_posTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="blog title"
        android:hint="@string/post_title"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/editText_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_posTitle" />

    <EditText
        android:id="@+id/editText_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="update"
        android:hint="@string/update_post_title"
        app:layout_constraintBottom_toTopOf="@id/text_post_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />
    <EditText
        android:id="@+id/text_post_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="id"
        android:hint="@string/post_id"
        app:layout_constraintBottom_toTopOf="@id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_update" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_post_id" />

    <EditText
        android:id="@+id/editText_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="update"
        android:hint="@string/delete_post_title"
        app:layout_constraintBottom_toTopOf="@id/editText_delete_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update" />
    <EditText
        android:id="@+id/editText_delete_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="update"
        android:hint="@string/delete_post_title"
        app:layout_constraintBottom_toTopOf="@id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_delete" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>